# OCCUtils

./: .gitignore  CMakeLists.txt  README.md  pixi.toml
src/: Fillet.cxx
